Revert "commit to dev"
This reverts commit aef833ee0f563a74eb529a05b14039d0042c385b.

--- a/src/assets/scss/app-dark.scss
+++ b/src/assets/scss/app-dark.scss
@@ -67,7 +67,7 @@ File: Main Css File
 
 // Pages
 @import "custom/pages/authentication";
-@import "custom/pages/Ecommerce";
+@import "custom/pages/ecommerce";
 @import "custom/pages/email";
 @import "custom/pages/chat";
 @import "custom/pages/kanbanboard";
