--- a/src/assets/scss/custom/plugins/icons/_dripicons.scss
+++ b/src/assets/scss/custom/plugins/icons/_dripicons.scss
@@ -212,7 +212,7 @@
 .dripicons-contract-2:before {
   content: "\35";
 }
-.dripicons-converEcommerceon:before {
+.dripicons-conversation:before {
   content: "\36";
 }
 .dripicons-copy:before {
