--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -67,7 +67,7 @@ File: Main Css File
 
 // Pages
 @import "custom/pages/authentication";
-@import "custom/pages/Ecommerce";
+@import "custom/pages/ecommerce";
 @import "custom/pages/email";
 @import "custom/pages/chat";
 @import "custom/pages/kanbanboard";
