--- a/src/assets/scss/custom/pages/_ecommerce.scss
+++ b/src/assets/scss/custom/pages/_ecommerce.scss
@@ -1,5 +1,5 @@
 // 
-// Ecommerce.scss
+// ecommerce.scss
 //
 
 // product
@@ -19,7 +19,7 @@
 }
 
 
-.Ecommerce {
+.ecommerce {
 
     .accordion-item {
         border-bottom: 1px solid $border-color;
@@ -114,7 +114,7 @@
     }
 }
 
-.Ecommerce-sortby-list{
+.ecommerce-sortby-list{
     li{
         color: $dark;
         a{
@@ -206,7 +206,7 @@
     }           
 }
 
-// Ecommerce cart
+// ecommerce cart
 
 .product-cart-touchspin{
     border: 1px solid $input-border-color;
@@ -228,7 +228,7 @@
 
 }
 
-// Ecommerce checkout
+// ecommerce checkout
 
 .shipping-address{
     box-shadow: none;
